--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(DSandA C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(DSandA main.c sll.h sll.c)
+add_executable(DSandA main.c LinkedLists/sll.h LinkedLists/sll.c BinaryTree/bst.h BinaryTree/bst.c)
