adds array merge int function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(DSandA C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(${PROJECT_NAME} main.c DataStructures/LinkedLists/sll.h DataStructures/LinkedLists/sll.c DataStructures/BinaryTree/bst.h DataStructures/BinaryTree/bst.c function-pointers/function-pointers.h function-pointers/function-pointers.c cake-thief/cake-thief.c cake-thief/cake-thief.h)
+add_executable(${PROJECT_NAME} main.c DataStructures/LinkedLists/sll.h DataStructures/LinkedLists/sll.c DataStructures/BinaryTree/bst.h DataStructures/BinaryTree/bst.c function-pointers/function-pointers.h function-pointers/function-pointers.c cake-thief/cake-thief.c cake-thief/cake-thief.h cake-array-merge/array-merge.c cake-array-merge/array-merge.h)
 
 target_include_directories(${PROJECT_NAME} PRIVATE Helpers)
